2010-02-25  Abel Cheung  <abelcheung@gmail.com>

	* Initial shortcode support.
	* Fix comment rendering limitation bug.
	* wp-scorerender.php:
	- (scorerender_shortcode_unsupported) New func.
	- (scorerender_shortcode_handler) New func.
	- (scorerender_parse_shortcode) New func.

2010-02-25  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-shortcode.php:
	- New file, taken from WP 2.9.2 as a replacement of shortcode API
	  because 2.6-2.7 one is not good enough to use.

2010-02-25  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php:
	- Rename ScoreRender class to SrNotationBase. 

2010-02-24  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php, notation/*.php:
	- Rename ScoreRender_Notation interface to SrNotationInterface.
	
2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_conversion_hook) notation was not deactivated even when
	  corresponding notation program was unset.
	  
2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- (cache_location_match) Removed, not used anymore.

2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Drop CACHE_URL setting completely, now cached images are not accessed
	  directly via URL.
	  
2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Now CACHE_DIR and CACHE_URL settings can be empty.
	- Unanimously use scorerender_get_cache_location() to get cache image
	  folder.
	  
2010-02-23  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_get_cache_location) Can return both indexed or
	  associative array.
	  
2010-02-22  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_get_cache_location) New func, for getting location of
	  cache folder. Similar to the removed scorerender_get_upload_dir().
	  
2010-02-22  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: